--- a/2023_Graduate_Project/View/Base.lproj/Main.storyboard
+++ b/2023_Graduate_Project/View/Base.lproj/Main.storyboard
@@ -488,47 +488,59 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="v8E-IO-PIq">
-                                <rect key="frame" x="20" y="68" width="374" height="774"/>
+                                <rect key="frame" x="10" y="68" width="394" height="774"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="0SH-dc-j61">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="400"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="394" height="410.5"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="zIZ-Qh-XQe">
-                                                <rect key="frame" x="0.0" y="0.0" width="374" height="400"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="394" height="410.5"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="kIq-cg-BXN">
-                                                        <rect key="frame" x="0.0" y="0.0" width="374" height="50"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="394" height="20.5"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="253" verticalHuggingPriority="251" horizontalCompressionResistancePriority="752" text="제목 :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HV1-aZ-YvU">
-                                                                <rect key="frame" x="0.0" y="0.0" width="38.5" height="50"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="38.5" height="20.5"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                 <nil key="textColor"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9JL-17-AJS">
-                                                                <rect key="frame" x="48.5" y="0.0" width="325.5" height="50"/>
+                                                                <rect key="frame" x="48.5" y="0.0" width="345.5" height="20.5"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                 <nil key="textColor"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                         </subviews>
                                                     </stackView>
-                                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="jMJ-Fz-vZe">
-                                                        <rect key="frame" x="0.0" y="50" width="374" height="350"/>
-                                                        <color key="backgroundColor" red="0.97254901959999995" green="0.96862745100000003" blue="0.95294117649999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tvo-xr-mnD">
+                                                        <rect key="frame" x="0.0" y="20.5" width="394" height="390"/>
+                                                        <subviews>
+                                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="jMJ-Fz-vZe">
+                                                                <rect key="frame" x="20" y="20" width="354" height="350"/>
+                                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="height" constant="350" id="jI1-jD-gGf"/>
+                                                                </constraints>
+                                                                <color key="textColor" systemColor="labelColor"/>
+                                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                            </textView>
+                                                        </subviews>
+                                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                         <constraints>
-                                                            <constraint firstAttribute="height" constant="350" id="jI1-jD-gGf"/>
+                                                            <constraint firstItem="jMJ-Fz-vZe" firstAttribute="top" secondItem="Tvo-xr-mnD" secondAttribute="top" constant="20" symbolic="YES" id="Gi0-0A-cwG"/>
+                                                            <constraint firstAttribute="trailing" secondItem="jMJ-Fz-vZe" secondAttribute="trailing" constant="20" symbolic="YES" id="KOw-bh-XEo"/>
+                                                            <constraint firstAttribute="bottom" secondItem="jMJ-Fz-vZe" secondAttribute="bottom" constant="20" symbolic="YES" id="iaN-mc-Prk"/>
+                                                            <constraint firstItem="jMJ-Fz-vZe" firstAttribute="leading" secondItem="Tvo-xr-mnD" secondAttribute="leading" constant="20" symbolic="YES" id="yro-y7-X7G"/>
                                                         </constraints>
-                                                        <color key="textColor" systemColor="labelColor"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                                    </textView>
+                                                    </view>
                                                 </subviews>
                                             </stackView>
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="mpw-kJ-GL9">
-                                        <rect key="frame" x="0.0" y="410" width="374" height="364"/>
+                                        <rect key="frame" x="0.0" y="420.5" width="394" height="353.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="댓글" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2nO-Xx-jec">
                                                 <rect key="frame" x="0.0" y="0.0" width="29.5" height="20.5"/>
@@ -537,18 +549,18 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="fKE-jr-IgE">
-                                                <rect key="frame" x="0.0" y="36.5" width="374" height="277"/>
+                                                <rect key="frame" x="0.0" y="36.5" width="394" height="267"/>
                                                 <color key="backgroundColor" red="0.97254901959999995" green="0.96862745100000003" blue="0.95294117649999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <prototypes>
                                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="75" id="gO9-gp-2Vr" customClass="FreeboardCommentCell" customModule="_023_Graduate_Project" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="50" width="374" height="75"/>
+                                                        <rect key="frame" x="0.0" y="50" width="394" height="75"/>
                                                         <autoresizingMask key="autoresizingMask"/>
                                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="gO9-gp-2Vr" id="pFP-Ie-jyx">
-                                                            <rect key="frame" x="0.0" y="0.0" width="374" height="75"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="394" height="75"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <subviews>
                                                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="GfS-zr-taf">
-                                                                    <rect key="frame" x="10" y="10" width="354" height="55"/>
+                                                                    <rect key="frame" x="10" y="10" width="374" height="55"/>
                                                                     <subviews>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="익명 :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s3a-lO-TVn">
                                                                             <rect key="frame" x="0.0" y="0.0" width="38.5" height="55"/>
@@ -557,7 +569,7 @@
                                                                             <nil key="highlightedColor"/>
                                                                         </label>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a9B-g3-UOO">
-                                                                            <rect key="frame" x="43.5" y="0.0" width="310.5" height="55"/>
+                                                                            <rect key="frame" x="43.5" y="0.0" width="330.5" height="55"/>
                                                                             <string key="text">내용내용내용내용내용내용내내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용용</string>
                                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                             <nil key="textColor"/>
@@ -584,15 +596,15 @@
                                                 </prototypes>
                                             </tableView>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="0s5-Rz-jIP">
-                                                <rect key="frame" x="0.0" y="329.5" width="374" height="34.5"/>
+                                                <rect key="frame" x="0.0" y="319.5" width="394" height="34"/>
                                                 <subviews>
                                                     <textField opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="749" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iEx-zH-h6T">
-                                                        <rect key="frame" x="0.0" y="0.0" width="313.5" height="34.5"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="333.5" height="34"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits"/>
                                                     </textField>
                                                     <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mjc-xX-uac">
-                                                        <rect key="frame" x="320.5" y="0.0" width="53.5" height="34.5"/>
+                                                        <rect key="frame" x="340.5" y="0.0" width="53.5" height="34"/>
                                                         <color key="backgroundColor" red="0.71676682810000003" green="0.91532703260000003" blue="0.94074213500000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <state key="normal" title="Button"/>
                                                         <buttonConfiguration key="configuration" style="plain" title="등록"/>
@@ -618,8 +630,8 @@
                         <viewLayoutGuide key="safeArea" id="BP1-4V-JgW"/>
                         <color key="backgroundColor" red="0.97254901959999995" green="0.96862745100000003" blue="0.95294117649999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="v8E-IO-PIq" firstAttribute="leading" secondItem="BP1-4V-JgW" secondAttribute="leading" constant="20" id="E9H-L0-nlv"/>
-                            <constraint firstItem="BP1-4V-JgW" firstAttribute="trailing" secondItem="v8E-IO-PIq" secondAttribute="trailing" constant="20" id="IEM-ZL-kcd"/>
+                            <constraint firstItem="v8E-IO-PIq" firstAttribute="leading" secondItem="BP1-4V-JgW" secondAttribute="leading" constant="10" id="E9H-L0-nlv"/>
+                            <constraint firstItem="BP1-4V-JgW" firstAttribute="trailing" secondItem="v8E-IO-PIq" secondAttribute="trailing" constant="10" id="IEM-ZL-kcd"/>
                             <constraint firstItem="v8E-IO-PIq" firstAttribute="top" secondItem="BP1-4V-JgW" secondAttribute="top" constant="20" id="eb4-GN-dEf"/>
                             <constraint firstItem="BP1-4V-JgW" firstAttribute="bottom" secondItem="v8E-IO-PIq" secondAttribute="bottom" constant="20" id="hvk-Xh-wca"/>
                         </constraints>
