--- a/2023_Graduate_Project/Model/Cell/ChatCell.xib
+++ b/2023_Graduate_Project/Model/Cell/ChatCell.xib
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="SOYO Maple Regular.otf">
+            <string>SOYO-Maple-Regular</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -16,32 +22,33 @@
                 <rect key="frame" x="0.0" y="0.0" width="393" height="202"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" alignment="bottom" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="AcZ-DG-hgH">
+                    <stackView opaque="NO" contentMode="scaleToFill" alignment="bottom" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="Hwr-IL-KtB">
                         <rect key="frame" x="10" y="10" width="373" height="162"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Vxe-i7-nuL">
-                                <rect key="frame" x="0.0" y="78.666666666666686" width="373" height="83.333333333333314"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="bottom" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="3yj-Q0-Cc3">
+                                <rect key="frame" x="0.0" y="66.666666666666686" width="373" height="95.333333333333314"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="acG-l9-fQP">
-                                        <rect key="frame" x="0.0" y="0.0" width="373" height="61"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UEC-MA-JcH">
+                                        <rect key="frame" x="112" y="0.0" width="261" height="67.666666666666671"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G1g-7z-jqp">
-                                                <rect key="frame" x="8" y="8" width="357" height="45"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NNS-gs-0w2">
+                                                <rect key="frame" x="20" y="20" width="221" height="27.666666666666671"/>
+                                                <fontDescription key="fontDescription" name="SOYO-Maple-Regular" family="SOYO Maple" pointSize="15"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
-                                            <constraint firstAttribute="trailing" secondItem="G1g-7z-jqp" secondAttribute="trailing" constant="8" id="BfS-OP-6Iy"/>
-                                            <constraint firstItem="G1g-7z-jqp" firstAttribute="top" secondItem="acG-l9-fQP" secondAttribute="top" constant="8" id="Fu6-zH-oJV"/>
-                                            <constraint firstAttribute="bottom" secondItem="G1g-7z-jqp" secondAttribute="bottom" constant="8" id="KIM-9i-Haq"/>
-                                            <constraint firstItem="G1g-7z-jqp" firstAttribute="leading" secondItem="acG-l9-fQP" secondAttribute="leading" constant="8" id="RjS-ea-XGD"/>
+                                            <constraint firstAttribute="trailing" secondItem="NNS-gs-0w2" secondAttribute="trailing" constant="20" symbolic="YES" id="0ep-gZ-Uh0"/>
+                                            <constraint firstItem="NNS-gs-0w2" firstAttribute="leading" secondItem="UEC-MA-JcH" secondAttribute="leading" constant="20" symbolic="YES" id="K5W-NU-mJW"/>
+                                            <constraint firstAttribute="bottom" secondItem="NNS-gs-0w2" secondAttribute="bottom" constant="20" symbolic="YES" id="caf-Z1-82P"/>
+                                            <constraint firstItem="NNS-gs-0w2" firstAttribute="top" secondItem="UEC-MA-JcH" secondAttribute="top" constant="20" symbolic="YES" id="qVn-We-Ai5"/>
                                         </constraints>
                                     </view>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rq6-bP-ObY">
-                                        <rect key="frame" x="0.0" y="68.999999999999986" width="373" height="14.333333333333329"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4zE-jM-Tr8">
+                                        <rect key="frame" x="339.66666666666669" y="80.666666666666671" width="33.333333333333314" height="14.666666666666671"/>
+                                        <fontDescription key="fontDescription" name="SOYO-Maple-Regular" family="SOYO Maple" pointSize="12"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -51,18 +58,23 @@
                     </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="AcZ-DG-hgH" secondAttribute="bottom" constant="30" id="NmK-bF-v8C"/>
-                    <constraint firstAttribute="trailing" secondItem="AcZ-DG-hgH" secondAttribute="trailing" constant="10" id="VHa-0y-Wxt"/>
-                    <constraint firstItem="AcZ-DG-hgH" firstAttribute="top" secondItem="ivh-ry-Mqt" secondAttribute="top" constant="10" id="ebm-jY-BgO"/>
-                    <constraint firstItem="AcZ-DG-hgH" firstAttribute="leading" secondItem="ivh-ry-Mqt" secondAttribute="leading" constant="10" id="qJW-Wy-VaX"/>
+                    <constraint firstItem="Hwr-IL-KtB" firstAttribute="top" secondItem="ivh-ry-Mqt" secondAttribute="top" constant="10" id="XIF-AV-yLX"/>
+                    <constraint firstAttribute="trailing" secondItem="Hwr-IL-KtB" secondAttribute="trailing" constant="10" id="fCF-Cl-tHB"/>
+                    <constraint firstItem="Hwr-IL-KtB" firstAttribute="leading" secondItem="ivh-ry-Mqt" secondAttribute="leading" constant="10" id="fbe-V2-WrR"/>
+                    <constraint firstAttribute="bottom" secondItem="Hwr-IL-KtB" secondAttribute="bottom" constant="30" id="nHE-bW-zds"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="bubbleStackView" destination="Vxe-i7-nuL" id="pU5-1b-URo"/>
-                <outlet property="detailLabel" destination="G1g-7z-jqp" id="xCJ-Th-vbu"/>
-                <outlet property="timeLabel" destination="rq6-bP-ObY" id="Wza-gY-vJ6"/>
+                <outlet property="chatBubble" destination="UEC-MA-JcH" id="iuV-vs-1dg"/>
+                <outlet property="detailLabel" destination="NNS-gs-0w2" id="cpo-9u-E4B"/>
+                <outlet property="timeLabel" destination="4zE-jM-Tr8" id="KPp-fC-i2L"/>
             </connections>
-            <point key="canvasLocation" x="52.671755725190835" y="134.50704225352112"/>
+            <point key="canvasLocation" x="-173" y="143"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
