--- a/2023_Graduate_Project/Model/Cell/ChatCell.xib
+++ b/2023_Graduate_Project/Model/Cell/ChatCell.xib
@@ -15,7 +15,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="202" id="GQw-df-w6E" customClass="ChatCell" customModule="_023_Graduate_Project" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell1" rowHeight="202" id="GQw-df-w6E" customClass="ChatCell" customModule="_023_Graduate_Project" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="393" height="202"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="GQw-df-w6E" id="ivh-ry-Mqt">
@@ -23,15 +23,15 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" alignment="bottom" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="Hwr-IL-KtB">
-                        <rect key="frame" x="10" y="10" width="373" height="162"/>
+                        <rect key="frame" x="30" y="10" width="353" height="162"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="bottom" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="3yj-Q0-Cc3">
-                                <rect key="frame" x="0.0" y="66.666666666666686" width="373" height="95.333333333333314"/>
+                                <rect key="frame" x="0.0" y="66.666666666666686" width="353" height="95.333333333333314"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UEC-MA-JcH">
-                                        <rect key="frame" x="112" y="0.0" width="261" height="67.666666666666671"/>
+                                        <rect key="frame" x="92" y="0.0" width="261" height="67.666666666666671"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NNS-gs-0w2">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NNS-gs-0w2">
                                                 <rect key="frame" x="20" y="20" width="221" height="27.666666666666671"/>
                                                 <fontDescription key="fontDescription" name="SOYO-Maple-Regular" family="SOYO Maple" pointSize="15"/>
                                                 <nil key="textColor"/>
@@ -47,7 +47,7 @@
                                         </constraints>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4zE-jM-Tr8">
-                                        <rect key="frame" x="339.66666666666669" y="80.666666666666671" width="33.333333333333314" height="14.666666666666671"/>
+                                        <rect key="frame" x="319.66666666666669" y="80.666666666666671" width="33.333333333333314" height="14.666666666666671"/>
                                         <fontDescription key="fontDescription" name="SOYO-Maple-Regular" family="SOYO Maple" pointSize="12"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -60,7 +60,7 @@
                 <constraints>
                     <constraint firstItem="Hwr-IL-KtB" firstAttribute="top" secondItem="ivh-ry-Mqt" secondAttribute="top" constant="10" id="XIF-AV-yLX"/>
                     <constraint firstAttribute="trailing" secondItem="Hwr-IL-KtB" secondAttribute="trailing" constant="10" id="fCF-Cl-tHB"/>
-                    <constraint firstItem="Hwr-IL-KtB" firstAttribute="leading" secondItem="ivh-ry-Mqt" secondAttribute="leading" constant="10" id="fbe-V2-WrR"/>
+                    <constraint firstItem="Hwr-IL-KtB" firstAttribute="leading" secondItem="ivh-ry-Mqt" secondAttribute="leading" constant="30" id="fbe-V2-WrR"/>
                     <constraint firstAttribute="bottom" secondItem="Hwr-IL-KtB" secondAttribute="bottom" constant="30" id="nHE-bW-zds"/>
                 </constraints>
             </tableViewCellContentView>
